--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,3 +14,9 @@
     display: flex;
     justify-content: center;
 }
+
+.centre_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
